ticketing-project/infra/k8s/auth-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name:  auth-depl
spec:
  selector:
    matchLabels:
      app: auth
  replicas: 1
  template:
    metadata:
      labels:
        app:  auth
    spec:
      containers:
      - name:  auth
        image:  hyderdevelops/auth:latest
        imagePullPolicy: Never
        
---
apiVersion: v1
kind: Service
metadata:
  name: auth-srv
spec:
  selector:
    app: auth
  type: ClusterIP
  ports:
  - name: auth-port
    protocol: TCP
    port: 3000
    targetPort: 3000
    
---

apiVersion: v1
kind: Service
metadata:
  name: auth-node-port
spec:
  type: NodePort
  selector:
    app: posts
  ports:
    - name: auth-node-port
      protocol: TCP
      port: 3000
      targetPort: 3000
