ticketing-project/infra/k8s/ingress-srv.yaml
# https://kubernetes.io/docs/concepts/services-networking/ingress/#the-ingress-resource

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-srv
  namespace: default
  
spec:
  rules:
  - host: ticketing.dev
    http:
      paths:
      - path: /api/users/
        pathType: Prefix
        backend:
          service:
            name: auth-srv
            port:
              number: 3000
